[tool.poetry]
name = "coingecko_redis"
version = "0.1.0"
description = "CoinGecko cache in redis"
authors = ["Tomas Toth <tomas.toth004@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
wps-light = "^0.16.1"
black = "^22.8.0"
pytest = "^7.1.3"
redis = "^4.3.4"
pycoingecko = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
